[gd_scene load_steps=5 format=3 uid="uid://bs1rilljov5l4"]

[ext_resource type="PackedScene" uid="uid://c4jo6wqiakv6r" path="res://Models/Menus/OptionMenus/player_data_status_card.tscn" id="1_4u0sc"]
[ext_resource type="Script" path="res://Models/Menus/Overlays/status_overlay.gd" id="1_b1odg"]
[ext_resource type="Script" path="res://Models/Menus/OptionMenus/options.gd" id="5_7lsxn"]
[ext_resource type="PackedScene" uid="uid://sjo686i6woks" path="res://Models/Menus/OptionMenus/option.tscn" id="6_i4pqh"]

[node name="StatusOverlay" type="Panel" node_paths=PackedStringArray("player_container", "target_selector")]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b1odg")
player_status_card_scene = ExtResource("1_4u0sc")
player_container = NodePath("HBoxContainer")
target_selector = NodePath("LeaderTargetSelector")

[node name="SwitchButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -103.0
offset_top = -72.0
offset_right = -30.0
offset_bottom = -30.0
grow_horizontal = 0
grow_vertical = 0
text = "Switch"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.5
offset_top = -338.0
offset_right = 158.5
offset_bottom = 338.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="PlayersStatus" parent="HBoxContainer" instance=ExtResource("1_4u0sc")]
layout_mode = 2

[node name="LeaderTargetSelector" type="ScrollContainer" parent="." node_paths=PackedStringArray("button_container")]
visible = false
layout_mode = 0
offset_left = 599.0
offset_top = 523.0
offset_right = 1321.0
offset_bottom = 568.0
size_flags_vertical = 3
focus_mode = 2
horizontal_scroll_mode = 0
vertical_scroll_mode = 0
script = ExtResource("5_7lsxn")
button_container = NodePath("PanelContainer/MarginContainer/VBoxContainer")
option_scene = ExtResource("6_i4pqh")

[node name="PanelContainer" type="PanelContainer" parent="LeaderTargetSelector"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="LeaderTargetSelector/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="LeaderTargetSelector/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Option" parent="LeaderTargetSelector/PanelContainer/MarginContainer/VBoxContainer" instance=ExtResource("6_i4pqh")]
layout_mode = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="SwitchButton" to="." method="_on_switch_button_pressed"]
[connection signal="item_activated" from="LeaderTargetSelector" to="." method="choose_target"]
